# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: audit-on-push.yml  general.yml
configuration/: production.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
