[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Fredrik Jonsén <fredrik@jonsen.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "=3.0.0-beta.5"
actix-web = "=4.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
chrono = "0.4.19"
config = "0.11.0"
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.2", features = ["v4"] }
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.2.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.4"
serde-aux = "2.2.0"
unicode-segmentation = "1.7.1"
validator = "0.13.0"


[dependencies.sqlx]
version = "0.5.4"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
fake = "~2.3.0"
once_cell = "1.7.2"
quickcheck = "^0.9"
quickcheck_macros = "^0.9"
reqwest = "0.11"
test-case = "1.1.0"
tokio = "1"
